@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1725] fixed graphitem sortorder (Aly)
  - [ZBX-1635] fixed possible Windows agent crash when using checks based on performance counters (Sasha)
  - [ZBX-1759] fixed bug when bulk acknowledge, acknowledges already acknowledged events (Vedmak)
  - [ZBX-1596] fixed checking of allowed hosts for data sent by zabbix_sender (Dmitry)
